Homework20. Java IO. Часть 2. Потоки ввода/вывода. Fixes.